# dlux

./: .docker-compose_db.env  .docker-compose_django.env  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  set_app_name.py
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yaml
dlux/: __init__.py  admin.py  apps.py  dlux_fields.py  fields.py  models.py  schema.py  tests.py  urls.py  views.py
dlux/migrations/: 0001_initial.py  0002_childwork_childwork_unique_order_per_parent_and_more.py
dlux/tests/: tests_models.py
project/: settings.py  urls.py
